--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,32 @@
-name: Deploy MkDocs site
+name: publish-github-pages
 
 on:
   push:
     branches:
       - main
+    paths:
+      - 'curriculam/**'
+  workflow_dispatch:
 
 permissions:
   contents: write
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-24.04
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: 3.x
+      - run: pip install mkdocs
+      - run: pip install mkdocs-material mkdocs-glightbox
 
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
+      - name: Build docs site
+        run: mkdocs build -f curriculam/mkdocs.yml
 
-      - name: Deploy site
+      - name: Deploy
         run: |
+          cd docs
           mkdocs gh-deploy --force
